--- a/main.css
+++ b/main.css
@@ -5,17 +5,7 @@ body{
 
 	}
 header > h1 {text-align: center;}
-nav{
- 
-	width: 700px;
-    height: 50px;
-    background-color:hsla(35,6%,39%,1.00);
-	border-radius: 20px;
-    float: inline;
-	margin: 0px 0px 0px 25px;
-	padding:5px 10px;
-	border: solid;	
-}
+
 main{
 	width: 700px;
     height: 40px;
@@ -32,7 +22,7 @@ main{
 
 #container{
 	width: 800px;
-	height: 1000px;
+	height: 1960px;
     background-color:hsla(35,18%,74%,1.00);
     margin: 0 auto;
 }
@@ -62,16 +52,104 @@ article
 	padding-bottom: 20px;
 	border: solid;
 }
+section{
+	width: 700px;
+	height: 150px;
+    background-color:hsla(356,9%,71%,1.00);
+	border-radius: 20px;
+    float: left;
+    margin-left: 28px;
+	margin-right: 46px;
+	margin-top: 20px;
+	margin-bottom: 25px;
+	padding: 10px;
+	padding-bottom: 20px;
+	border: solid;
+	
+}
+article{
+	width: 300px;
+	height: 475px;
+    background-color: rgba(165,138,139,1.00);
+	border-radius: 20px;
+    float: left;
+	margin-top: 10px;
+    margin-left: 28px;
+	margin-right: 46px;
+	margin-bottom: 20px;
+	padding: 10px;
+	padding-bottom: 20px;
+	border: solid;
+}
+article{
+	width: 300px;
+	height: 475px;
+    background-color: rgba(165,138,139,1.00);
+	border-radius: 20px;
+    float: left;
+	margin-top: 10px;
+    margin-left: 28px;
+	margin-right: 46px;
+	margin-bottom: 20px;
+	padding: 10px;
+	padding-bottom: 20px;
+	border: solid;
+}
 
+section{
+	width: 700px;
+	height: 150px;
+    background-color:hsla(356,9%,71%,1.00);
+	border-radius: 20px;
+    float: left;
+    margin-left: 28px;
+	margin-right: 46px;
+	margin-top: 20px;
+	margin-bottom: 25px;
+	padding: 10px;
+	padding-bottom: 20px;
+	border: solid;
+}
 footer {
+	width: 710px;
 	clear: both;
     background-color:hsla(351,4%,38%,1.00);
-	border-radius: 5px;
+	margin-left: 25px;
+	margin-top: 25px;
+	border-radius: 25px;
 	padding: 5px;
 	padding-bottom: 10px;
-	text-align:left;
+	text-align:center;
 	text-decoration-color:hsla(0,0%,0%,1.00);
 	border: solid;
 	
     
+}
+
+nav ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #4D4041;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover:not(.active) {
+  background-color: #827B7B;
+}
+
+.active {
+  background-color: #9B7172;
 }
